DBHelper en 'Modelo': OK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EDSA</string>
+    <string name="extended_appname">Email Data Storage Application</string>
 </resources>
