mejora al implementar POO en las clases: OK; inicio automatico para usuario: OK

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="retroceder">Retroceder</string>
     <string name="registrarme">Registrarme</string>
     <string name="quees_txt1">¿Qué es EDSA?</string>
-    <string name="quees_txt2">Es una aplicación para gestionar de mejor manera tus correos electrónicos.</string>
+    <string name="quees_txt2">Es una aplicación para gestionar de mejor manera tus correos electrónicos y las cuentas asociadas a ellos.</string>
     <string name="funciona_txt1">¿Cómo funciona?</string>
     <string name="funciona_txt2">a) Haz clic en agregar email</string>
     <string name="funciona_txt3">b) Completa el formulario</string>
