--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">EDSA</string>
     <string name="extended_appname">Email Data Storage Application</string>
     <string name="support_usr">El usuario debe contener mínimo 4 caracteres y máximo 15</string>
-    <string name="support_pss">La contraseña debe contener mínimo 8 caracteres con al menos 1 letra mayúscula, 1 minúscula, 1 número y 1 caracter especial (,.-_*%)</string>
+    <string name="support_pss">La contraseña debe contener mínimo 8 caracteres con al menos 1 número y 1 caracter especial (,.-_*%)</string>
     <string name="support_key1">La palabra secreta te ayudará a mantener tu cuenta más segura</string>
     <string name="support_key2">Esta debe contener mínimo 6 caracteres, sin números y con al menos 1 caracter especial</string>
     <string name="support_npss">La contraseña nueva debe contener mínimo 8 caracteres, máximo 15 con al menos 1 letra mayúscula, 1 minúscula, 1 número y 1 caracter especial (,.-_*%)</string>
@@ -32,4 +32,24 @@
         Has concluido el tutorial\n\n
         Ahora puedes comenzar a usar EDSA
     </string>
+    <string name="usuario">Usuario</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="acceder">Acceder</string>
+    <string name="olvid_mis_datos">Olvidé mis datos</string>
+    <string name="hola_nelige_una_opci_n">¡Hola!\nElige una opción</string>
+    <string name="tomar_el_tutorial">Tomar el tutorial</string>
+    <string name="registrarme_ahora">Registrarme ahora</string>
+    <string name="no_hay_emails_agregados">No hay emails agregados</string>
+    <string name="no_hay_cuentas_agregadas">No hay cuentas agregadas</string>
+    <string name="nombre_de_usuario">Nombre de Usuario</string>
+    <string name="palabra_secreta">Palabra secreta</string>
+    <string name="correo_electr_nico">Correo electrónico</string>
+    <string name="agregar">Agregar</string>
+    <string name="tipo_de_cuenta">Tipo de cuenta</string>
+    <string name="eliminar">Eliminar</string>
+    <string name="cuentas_asociadas">También se eliminarán las cuentas asociadas</string>
+    <string name="tipo_cuenta_ex">Tipo de cuenta (YT, FB, etc)</string>
+    <string name="guardar_cambios">Guardar cambios</string>
+    <string name="cambiar">Cambiar</string>
+    <string name="actualizar">Actualizar</string>
 </resources>
