--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">EDSA</string>
     <string name="extended_appname">Email Data Storage Application</string>
-    <string name="support_usr">El usuario debe contener mínimo 4 caracteres y máximo 15</string>
-    <string name="support_pss">La contraseña debe contener mínimo 8 caracteres con al menos 1 número y 1 caracter especial (,.-_*%)</string>
+    <string name="support_usr">El usuario debe contener mínimo 4 caracteres y máximo 15 sin espacios</string>
+    <string name="support_pss">La contraseña debe contener mínimo 6 caracteres sin espacios</string>
     <string name="support_key1">La palabra secreta te ayudará a mantener tu cuenta más segura</string>
-    <string name="support_key2">Esta debe contener mínimo 6 caracteres, sin números y con al menos 1 caracter especial</string>
-    <string name="support_npss">La contraseña nueva debe contener mínimo 8 caracteres, máximo 15 con al menos 1 letra mayúscula, 1 minúscula, 1 número y 1 caracter especial (,.-_*%)</string>
+    <string name="support_key2">Esta debe contener mínimo 4 caracteres sin espacios</string>
+    <string name="support_npss">La contraseña nueva debe contener mínimo 8 caracteres</string>
     <string name="support_ncpss">La contraseña confirmada debe coincidir con la contraseña nueva</string>
     <string name="avanzar">Avanzar</string>
     <string name="retroceder">Retroceder</string>
