actualizacion: se integra el manejo correcto de fragments; UI actualizada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="keyword_hint">Palabra clave</string>
     <string name="emails">Emails</string>
     <string name="accounts">Cuentas</string>
+    <string name="new_password">Nueva contraseña</string>
 </resources>
